--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
+    "is_js": "^0.9.0",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
@@ -55,10 +56,10 @@
     "react-dom": "^17.0.1",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
-    "resolve": "1.18.1",
+    "resolve": "^1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.0.5",
-    "semver": "7.3.2",
+    "semver": "^7.3.2",
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
